fix default algebra